--- a/app/.env
+++ b/app/.env
@@ -20,11 +20,9 @@ APP_SECRET=7f764c9b3f42fbf39963b04ba7025014
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
+# Em teste o phpunit.xml define DATABASE_URL=sqlite:///:memory:
+# Local/Docker: use 127.0.0.1 ou mysql (host do serviço) conforme o ambiente
+DATABASE_URL="mysql://${DB_USER:-root}:${DB_PASSWORD:-root}@${DB_HOST:-127.0.0.1}:${DB_PORT:-3306}/${DB_NAME:-app}?serverVersion=8&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> API Licenças / Integrador ###
