--- a/app/composer.json
+++ b/app/composer.json
@@ -24,7 +24,7 @@
         ],
         "test": [
             "phpcs",
-            "parallel-lint --exclude app --exclude vendor .",
+            "vendor/bin/parallel-lint --exclude vendor .",
             "phpunit"
         ],
         "lint": [
@@ -73,6 +73,7 @@
     },
     "require-dev": {
         "escapestudios/symfony2-coding-standard": "^3.12",
+        "php-parallel-lint/php-parallel-lint": "^1.4",
         "phpspec/prophecy-phpunit": "^2.0",
         "phpunit/phpunit": "^9.5",
         "slevomat/coding-standard": "^8.0.0",
