--- a/app/config/packages/doctrine.yaml
+++ b/app/config/packages/doctrine.yaml
@@ -1,21 +1,12 @@
 doctrine:
     dbal:
-        driver: pdo_mysql
-        user: '%env(resolve:DB_USER)%'
-        password: '%env(resolve:DB_PASSWORD)%'
-        host: '%env(resolve:DB_HOST)%'
-        dbname: '%env(resolve:DB_NAME)%'
-        port: '%env(resolve:DB_PORT)%'
+        url: '%env(resolve:DATABASE_URL)%'
         persistent: true
         logging: false
         profiling: false
 
         types:
             uuid: Ramsey\Uuid\Doctrine\UuidType
-
-        # IMPORTANT: You MUST configure your server version,
-        # either here or in the DATABASE_URL env var (see .env file)
-        #server_version: '13'
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
@@ -26,12 +17,6 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Domain/Entity'
                 prefix: 'App\Domain\Entity'
                 alias: App
-
-when@test:
-    doctrine:
-        dbal:
-            # "TEST_TOKEN" is typically set by ParaTest
-            dbname_suffix: '_test%env(default::TEST_TOKEN)%'
 
 when@prod:
     doctrine:
