--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,16 @@ services:
     networks:
       - app
 
+  redis:
+    container_name: redis
+    image: redis:7
+    ports:
+      - 6380:6379
+    networks:
+      - app
+    volumes:
+      - ./redis/:/data:rw
+
 networks:
   app:
     external: true
