--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,19 +14,19 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Build containers
-        run: docker-compose -f docker-compose.ci.yml build
+        run: docker compose -f docker compose.ci.yml build
 
       - name: Start containers
-        run: docker-compose -f docker-compose.ci.yml up -d
+        run: docker compose -f docker compose.ci.yml up -d
 
       - name: Install dependencies
-        run: docker-compose -f docker-compose.ci.yml exec -T app composer install --no-interaction
+        run: docker compose -f docker compose.ci.yml exec -T app composer install --no-interaction
 
       - name: Run lint (PHPStan)
-        run: docker-compose -f docker-compose.ci.yml exec -T app vendor/bin/phpstan analyse
+        run: docker compose -f docker compose.ci.yml exec -T app vendor/bin/phpstan analyse
 
       - name: Run tests (PHPUnit)
-        run: docker-compose -f docker-compose.ci.yml exec -T app vendor/bin/phpunit
+        run: docker compose -f docker compose.ci.yml exec -T app vendor/bin/phpunit
 
       - name: Stop containers
-        run: docker-compose -f docker-compose.ci.yml down
+        run: docker compose -f docker compose.ci.yml down
