--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -2,7 +2,7 @@ services:
   php:
     build:
       context: ./app
-      dockerfile: ./app/Dockerfile
+      dockerfile: Dockerfile
       target: ci
     volumes:
       - ./app:/app
