--- a/app/composer.json
+++ b/app/composer.json
@@ -76,6 +76,7 @@
         "php-parallel-lint/php-parallel-lint": "^1.4",
         "phpspec/prophecy-phpunit": "^2.0",
         "phpstan/phpstan": "^2.0",
+        "phpstan/phpstan-phpunit": "^2.0",
         "phpunit/phpunit": "^9.5",
         "slevomat/coding-standard": "^8.0.0",
         "squizlabs/php_codesniffer": "^3.6",
