--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "files.encoding": "utf8"
+    "files.encoding": "utf8",
+    "php.validate.executablePath": "/usr/bin/php",
+    "php.validate.run": "onType",
+    "intelephense.environment.phpVersion": "8.2.0"
 }
